default/objects/Activity/fields/Account_for_case__c.field-meta.xml
<CustomField>
    <fullName>Account_for_case__c</fullName>
    <formula>WhatId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_for_case</label>
    <type>Text</type>
</CustomField>