default/objects/Activity/fields/Active_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Active_Assigned__c</fullName>
    <description>Tasks owner isActive</description>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active_Assigned</label>
    <type>Checkbox</type>
</CustomField>