default/objects/Activity/fields/Activity_Nr_PPR_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Activity_Nr_PPR_Legacy__c</fullName>
    <label>Activity Nr. Legacy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>