default/objects/Activity/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <description>Identifies type of appointment so Subject field can be freed up to put in info appropriate for sending external invitation</description>
    <inlineHelpText>Identifies type of appointment so Subject field can be freed up to put in info appropriate for sending external invitation</inlineHelpText>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net New Appointment</fullName>
            </value>
            <value>
                <fullName>Follow-up Appointment</fullName>
            </value>
            <value>
                <fullName>Marketer Touch Point - Phone</fullName>
            </value>
            <value>
                <fullName>Marketer Touch Point - Face to Face</fullName>
            </value>
            <value>
                <fullName>Driver/Online Training</fullName>
            </value>
            <value>
                <fullName>Out of Office-Vacation/Personal/Holiday</fullName>
            </value>
            <value>
                <fullName>Field Sales Training</fullName>
            </value>
            <value>
                <fullName>Outbound Sales Training</fullName>
            </value>
            <value>
                <fullName>CCS Retention</fullName>
            </value>
            <value>
                <fullName>CCS Development</fullName>
            </value>
            <value>
                <fullName>CCS Care</fullName>
            </value>
            <value>
                <fullName>CCS Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>