default/objects/Activity/fields/Assigned_employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_employee_ID__c</fullName>
    <formula>CASESAFEID(Owner:User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned employee ID</label>
    <type>Text</type>
</CustomField>