default/objects/Activity/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <description>Task owner role used for Dial Lists</description>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Assigned Role</label>
    <type>Text</type>
</CustomField>