default/objects/Activity/fields/Attachments_Exist__c.field-meta.xml
<CustomField>
    <fullName>Attachments_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Activity had attachment this field should be TRUE, else FALSE</description>
    <inlineHelpText>If Activity had attachment this field should be TRUE, else FALSE</inlineHelpText>
    <label>Attachments Exist</label>
    <type>Checkbox</type>
</CustomField>