default/objects/Activity/fields/Call_time_MM_SS__c.field-meta.xml
<CustomField>
    <fullName>Call_time_MM_SS__c</fullName>
    <formula>FLOOR(CallDurationInSeconds/60) +
(
MOD(CallDurationInSeconds,60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call time (MM.SS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>