default/objects/Activity/fields/CallID__c.field-meta.xml
<CustomField>
    <fullName>CallID__c</fullName>
    <externalId>true</externalId>
    <label>Call ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>