default/objects/Activity/fields/CCS_US_instance_ID__c.field-meta.xml
<CustomField>
    <fullName>CCS_US_instance_ID__c</fullName>
    <label>CCS US instance ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>