default/objects/Activity/fields/CCS_US_instance_owner_name__c.field-meta.xml
<CustomField>
    <fullName>CCS_US_instance_owner_name__c</fullName>
    <label>CCS US instance owner name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>