default/objects/Activity/fields/Comments_summary__c.field-meta.xml
<CustomField>
    <fullName>Comments_summary__c</fullName>
    <label>Comments summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>