default/objects/Activity/fields/Created_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_By_ID__c</fullName>
    <formula>CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By_ID</label>
    <type>Text</type>
</CustomField>