default/objects/Activity/fields/Created_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Role</label>
    <type>Text</type>
</CustomField>