default/objects/Activity/fields/Created_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>Created_Time_GMT__c</fullName>
    <formula>IF(
  OR(
    VALUE( MID( TEXT( CreatedDate - 0 ), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( CreatedDate - 0 ), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( CreatedDate - 0 ), 12, 2 ) ) 
   -
   IF( 
     VALUE( MID( TEXT( CreatedDate - 0 ), 12, 2 ) ) &lt; 12, 
     0, 
     12 
   ) 
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( CreatedDate - 0 ), 15, 2 )
&amp; &quot;:&quot; &amp;
MID( TEXT( CreatedDate - 0 ), 18, 2 )
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( CreatedDate - 0 ), 12, 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time GMT</label>
    <type>Text</type>
</CustomField>