default/objects/Activity/fields/Date_Meeting_assigned_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_Meeting_assigned_FS__c</fullName>
    <label>Date Meeting assigned FS</label>
    <type>Date</type>
</CustomField>