default/objects/Activity/fields/Date_Meeting_FS_been_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Meeting_FS_been_completed__c</fullName>
    <label>Date Meeting FS been completed</label>
    <type>Date</type>
</CustomField>