default/objects/Activity/fields/Disqualification_type__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_type__c</fullName>
    <description>on Activity - to input CC disqual reason</description>
    <label>Disqualification type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneStatus</valueSetName>
    </valueSet>
</CustomField>