default/objects/Activity/fields/Due_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Due Date Today</label>
    <type>Checkbox</type>
</CustomField>