default/objects/Activity/fields/ELM_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>ELM_Training_Status__c</fullName>
    <description>By the Billing Call, training has to have been offered by the ELM rep. This field allows tracking on whether new customer training has been completed.</description>
    <inlineHelpText>By the Billing Call, training has to have been offered by the ELM rep. This field allows tracking on whether new customer training has been completed</inlineHelpText>
    <label>CCS ELM Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Trained on Welcome Call</fullName>
            </value>
            <value>
                <fullName>Trainined on Billing Call</fullName>
            </value>
            <value>
                <fullName>Training Declined</fullName>
            </value>
            <value>
                <fullName>Training Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>