default/objects/Activity/fields/End_Now__c.field-meta.xml
<CustomField>
    <fullName>End_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Now</label>
    <type>Checkbox</type>
</CustomField>