default/objects/Activity/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#FF0000</color>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#57F17C</color>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#AFCADF</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <color>#FF9900</color>
                <label>Cancellation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>