default/objects/Activity/fields/FieldSalesTerritory__c.field-meta.xml
<CustomField>
    <fullName>FieldSalesTerritory__c</fullName>
    <label>FieldSalesTerritory</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>