default/objects/Activity/fields/Five9_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Five9_Call_Time__c</fullName>
    <label>Five9 Call Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>