default/objects/Activity/fields/Id_Lead__c.field-meta.xml
<CustomField>
    <fullName>Id_Lead__c</fullName>
    <formula>IF(LEFT(WhoId , 3) =&quot;00Q&quot; ,WhoId, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Lead</label>
    <type>Text</type>
</CustomField>