default/objects/Activity/fields/id_Task_is_not_case_sensitive__c.field-meta.xml
<CustomField>
    <fullName>id_Task_is_not_case_sensitive__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id Task is not case sensitive</label>
    <type>Text</type>
</CustomField>