default/objects/Activity/fields/isdc_dialer_call_type__c.field-meta.xml
<CustomField>
    <fullName>isdc_dialer_call_type__c</fullName>
    <inlineHelpText>Where the call originated - Click-to-Call, Seek List, or Domino list.</inlineHelpText>
    <label>Dialer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Click-to-Call</fullName>
            </value>
            <value>
                <fullName>Seek</fullName>
            </value>
            <value>
                <fullName>Domino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>