default/objects/Activity/fields/isdc_dialer_list_name__c.field-meta.xml
<CustomField>
    <fullName>isdc_dialer_list_name__c</fullName>
    <inlineHelpText>If it was a list (Seek or Domino), the name of the list.</inlineHelpText>
    <label>List Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>