default/objects/Activity/fields/isdc_dialer_query_name__c.field-meta.xml
<CustomField>
    <fullName>isdc_dialer_query_name__c</fullName>
    <inlineHelpText>If it was from a Seek list, the name of the query that placed the record in the queue.</inlineHelpText>
    <label>Query Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>