default/objects/Activity/fields/Last_Event_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Status_Change__c</fullName>
    <label>Last Event Status Change</label>
    <type>DateTime</type>
</CustomField>