default/objects/Activity/fields/Last_Task_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Task_Status_Change__c</fullName>
    <label>Last Task Status Change</label>
    <type>DateTime</type>
</CustomField>