default/objects/Activity/fields/Nr_User_Task_owner__c.field-meta.xml
<CustomField>
    <fullName>Nr_User_Task_owner__c</fullName>
    <formula>Owner:User.Nr_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nr User Assigned</label>
    <type>Text</type>
</CustomField>