default/objects/Activity/fields/NVM_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>NVM_Call_Outcome__c</fullName>
    <description>NVM Call Outcome/Disposition</description>
    <inlineHelpText>Setting one of these on the &quot;Log a Call&quot; quick action will lead to follow up actions/tasks to be created in Salesforce automatically</inlineHelpText>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Additional info requested</fullName>
            </value>
            <value>
                <fullName>Black list</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Customer N/A</fullName>
            </value>
            <value>
                <fullName>Customer thinking</fullName>
            </value>
            <value>
                <fullName>Deposit Paid</fullName>
            </value>
            <value>
                <fullName>Deposit requested</fullName>
            </value>
            <value>
                <fullName>Didn’t talk to DM</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Left voicemail</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>Offer sent</fullName>
            </value>
            <value>
                <fullName>Starts process</fullName>
            </value>
            <value>
                <fullName>Submitted to Credit</fullName>
            </value>
            <value>
                <fullName>Technical problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>