default/objects/Activity/fields/NVM_Call_Quality__c.field-meta.xml
<CustomField>
    <fullName>NVM_Call_Quality__c</fullName>
    <label>Problem description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NVM_Call_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call disconnected</fullName>
            </value>
            <value>
                <fullName>Not able to connect</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Noise during call</fullName>
            </value>
            <value>
                <fullName>Call breaking up</fullName>
            </value>
            <value>
                <fullName>Can&#39;t hear customer</fullName>
            </value>
            <value>
                <fullName>Can&#39;t hear operator</fullName>
            </value>
            <value>
                <fullName>NVM not connected, old system ok</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
                <isActive>false</isActive>
                <label>Good</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>