default/objects/Activity/fields/NVM_Process_Builder_Time__c.field-meta.xml
<CustomField>
    <fullName>NVM_Process_Builder_Time__c</fullName>
    <formula>NVMContactWorld__CW_Call_End_Time__c  +65/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NVM Process Builder Time</label>
    <type>DateTime</type>
</CustomField>