default/objects/Activity/fields/NVM_Set_callback__c.field-meta.xml
<CustomField>
    <fullName>NVM_Set_callback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is left checked on NVM Tasks a follow up task will be automatically be created.</description>
    <label>Don&#39;t Set callback</label>
    <type>Checkbox</type>
</CustomField>