default/objects/Activity/fields/NVMConnect__DialEntry__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__DialEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dial Entry</label>
    <referenceTo>NVMConnect__Dial_Entry__c</referenceTo>
    <relationshipLabel>Task</relationshipLabel>
    <relationshipName>Task</relationshipName>
    <type>Lookup</type>
</CustomField>