default/objects/Activity/fields/NVMConnect__DialList__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__DialList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dial List</label>
    <referenceTo>NVMConnect__DialList__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>