default/objects/Activity/fields/NVMConnect__Next_Action__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__Next_Action__c</fullName>
    <description>Next actions list can be customised and used to drive workflow</description>
    <label>Next Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Call in 7 days</fullName>
            </value>
            <value>
                <fullName>Call tomorrow</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Don&#39;t call again</fullName>
            </value>
            <value>
                <fullName>Left Live Message</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sent Documentation</fullName>
            </value>
            <value>
                <fullName>Set Callback</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Update contact details</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>