default/objects/Activity/fields/NVMContactWorld__ACD__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__ACD__c</fullName>
    <description>The name of the ACD the call was delivered from</description>
    <label>ACD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>