default/objects/Activity/fields/NVMContactWorld__CallTalkTimeInSeconds__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
    <inlineHelpText>For Inbound, this is the time the customer spent connected to an agent. For Outbound, this is the time between the customer answering their phone and the call ending. This value is rounded to the nearest second.</inlineHelpText>
    <label>Call Talk Time (s)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>