default/objects/Activity/fields/NVMContactWorld__ContactWorld_Number__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
    <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
    <label>ContactWorld Number</label>
    <type>Phone</type>
</CustomField>