default/objects/Activity/fields/NVMContactWorld__Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Customer_Number__c</fullName>
    <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
    <label>Customer Number</label>
    <type>Phone</type>
</CustomField>