default/objects/Activity/fields/NVMContactWorld__CW_Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
    <description>The time in Contact World that the call ended</description>
    <label>CW Call End Time</label>
    <type>DateTime</type>
</CustomField>