default/objects/Activity/fields/NVMContactWorld__CW_Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
    <description>The time shown in Contact World when the call first hit your call plan</description>
    <label>CW Call Start Time</label>
    <type>DateTime</type>
</CustomField>