default/objects/Activity/fields/NVMContactWorld__InteractionQuality__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__InteractionQuality__c</fullName>
    <label>Interaction Quality</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>