default/objects/Activity/fields/NVMContactWorld__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Service_Name__c</fullName>
    <description>The service name that the call came from</description>
    <label>Service Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>