default/objects/Activity/fields/NVMStatsSF__NVM_Agent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__NVM_Agent__c</fullName>
    <formula>Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NVM Agent ID</label>
    <type>Text</type>
</CustomField>