default/objects/Activity/fields/Personnel_Number__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Number__c</fullName>
    <formula>Owner:User.Personnel_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personnel Number</label>
    <type>Text</type>
</CustomField>