default/objects/Activity/fields/PPR_Legacy_Activity_id__c.field-meta.xml
<CustomField>
    <fullName>PPR_Legacy_Activity_id__c</fullName>
    <label>PPR Legacy Activity id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>