default/objects/Activity/fields/QA_Comment__c.field-meta.xml
<CustomField>
    <fullName>QA_Comment__c</fullName>
    <label>QA Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>