default/objects/Activity/fields/QA_reason_for_refusal__c.field-meta.xml
<CustomField>
    <fullName>QA_reason_for_refusal__c</fullName>
    <label>QA reason for refusal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refusal on the client&#39;s initiative</fullName>
            </value>
            <value>
                <fullName>Error CallCenter</fullName>
            </value>
            <value>
                <fullName>Not identified</fullName>
            </value>
            <value>
                <fullName>Error sales manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>