default/objects/Activity/fields/QA_task__c.field-meta.xml
<CustomField>
    <fullName>QA_task__c</fullName>
    <description>Проверка отдела по контролю качества</description>
    <label>QA task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>NOT held</fullName>
            </value>
            <value>
                <fullName>NBT (not picking up)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>