default/objects/Activity/fields/Related_ERP__c.field-meta.xml
<CustomField>
    <fullName>Related_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP</label>
    <referenceTo>ERP__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>