default/objects/Activity/fields/Related_to_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Prefix__c</fullName>
    <description>Used to determine the object</description>
    <formula>LEFT(WhatId, 3)</formula>
    <label>Related to Prefix</label>
    <type>Text</type>
</CustomField>