default/objects/Activity/fields/Start_Now__c.field-meta.xml
<CustomField>
    <fullName>Start_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Now</label>
    <type>Checkbox</type>
</CustomField>