default/objects/Activity/fields/Status_Lead_Dialer__c.field-meta.xml
<CustomField>
    <fullName>Status_Lead_Dialer__c</fullName>
    <label>Status Lead/dialer</label>
    <length>90</length>
    <type>Text</type>
</CustomField>