default/objects/Activity/fields/Sub_topic__c.field-meta.xml
<CustomField>
    <fullName>Sub_topic__c</fullName>
    <label>Sub topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Topic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order new card(s)</fullName>
            </value>
            <value>
                <fullName>Block my card(s)</fullName>
            </value>
            <value>
                <fullName>Forgotten PIN code</fullName>
            </value>
            <value>
                <fullName>Question about my Invoice</fullName>
            </value>
            <value>
                <fullName>Invoice Dispute</fullName>
            </value>
            <value>
                <fullName>Invoice Resend</fullName>
            </value>
            <value>
                <fullName>I&amp;P Other requests</fullName>
            </value>
            <value>
                <fullName>Change Method of invoice Distribution</fullName>
                <label>Change Method of Invoice Distribution</label>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Contact Person Change</fullName>
            </value>
            <value>
                <fullName>Bank Details Change</fullName>
            </value>
            <value>
                <fullName>Company Name Change</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>ECO Program</fullName>
            </value>
            <value>
                <fullName>ClubSmart</fullName>
            </value>
            <value>
                <fullName>Guarantee</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
                <label>FAQs/General queries</label>
            </value>
            <value>
                <fullName>SME Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>My Online portal</fullName>
                <label>Online Portals</label>
            </value>
            <value>
                <fullName>Carnet</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>VAT Recovery</fullName>
            </value>
            <value>
                <fullName>Internal 1</fullName>
            </value>
            <value>
                <fullName>New Customer Credentials</fullName>
            </value>
            <value>
                <fullName>Payment confirmation</fullName>
                <label>Payment Confirmation</label>
            </value>
            <value>
                <fullName>Subaccount</fullName>
            </value>
            <value>
                <fullName>WPO</fullName>
            </value>
            <value>
                <fullName>Block and Order card(s)</fullName>
            </value>
            <value>
                <fullName>Company Details Change</fullName>
                <label>Company data change</label>
            </value>
            <value>
                <fullName>Change of Payment Method</fullName>
                <label>Payment details change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>