default/objects/Activity/fields/Task_FS__c.field-meta.xml
<CustomField>
    <fullName>Task_FS__c</fullName>
    <inlineHelpText>Только для группы Field Sales</inlineHelpText>
    <label>Task FS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Нет</fullName>
                <default>true</default>
                <label>Нет</label>
            </value>
            <value>
                <fullName>Да</fullName>
            </value>
            <value>
                <fullName>Командировка</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>