default/objects/Activity/fields/Task_Nr__c.field-meta.xml
<CustomField>
    <fullName>Task_Nr__c</fullName>
    <displayFormat>FCTask-{000000000}</displayFormat>
    <label>Task Nr.</label>
    <type>AutoNumber</type>
</CustomField>